--- a/01-Emmet/index.html
+++ b/01-Emmet/index.html
@@ -9,25 +9,25 @@
 <body>
     <main>
         <header>
-            <h1>ADSO 2873711</h1>
-            <h2>Análisis y Desarrollo de Software</h2>
+            <h1>EMMET</h1>
+            <h2>Plugin revolucionario para la mayoría de editores de texto usado por desarrolladores web cuyo flujo de trabajo depende de HTML y CSS.</h2>
         </header>
         <menu>
-            <a href="01-Emmet/index.html">
+            <a href="">
                 <i>01</i>
-                <span>Emmet</span>
+                <span>Child</span>
             </a>    
             <a href="">
                 <i>02</i>
-                <span>HTML</span>
+                <span>Sibling</span>
             </a>
             <a href="">
                 <i>03</i>
-                <span>CSS</span>
+                <span>Multiplication</span>
             </a>
             <a href="">
                 <i>04</i>
-                <span>JavaScript</span>
+                <span>Class</span>
             </a>
         </menu>
     </main>
