--- a/01-Emmet/13-grouping.html
+++ b/01-Emmet/13-grouping.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13- Climp</title>
+    <title>13- Grouping</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
@@ -24,7 +24,12 @@
             <p>(header>nav)(section>article)</p>
             <h3>Resultado:</h3>
 <xmp>   
-    (header>nav)(section>article)
+<header>
+    <nav></nav>
+</header>
+<setion>
+    <article></article>
+</setion>
 </xmp>
         </section>
     </main>
