--- a/01-Emmet/16-meta.html
+++ b/01-Emmet/16-meta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12- Climp</title>
+    <title>16- Meta tag</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
@@ -14,22 +14,19 @@
     </nav>
     <main>
         <header>
-            <h1>12 -  Climp up ^</h1>
+            <h1>16 -  Meta tag</h1>
             <h2>
-                Este comodín permite subir de nivel.
+                Este comodín permite crear meta tag.
             </h2>
         </header>
         <section>
             <h3>Ejemplo:</h3>
-            <p>section>article>div^p</p>
+            <p>meta:vp</p>
+            <p>meta:utf</p>
             <h3>Resultado:</h3>
 <xmp>   
-<section>
-    <article>
-        <div></div>
-    </article>
-    <p></p>
-</section>
+<meta name="viewport">
+<meta http-equiv="Content-Type">
 </xmp>
         </section>
     </main>
