--- a/01-Emmet/14-lorem.html
+++ b/01-Emmet/14-lorem.html
@@ -16,15 +16,17 @@
         <header>
             <h1>14 -  Lorem "lorem"</h1>
             <h2>
-                Este comodín permite Agrupar Elementos.
+                Este comodín permite rellenar texto.
             </h2>
         </header>
         <section>
             <h3>Ejemplo:</h3>
-            <p>lorem7</p>
+            <p>lorem5</p>
+            <p>lorem3</p>
             <h3>Resultado:</h3>
 <xmp>   
-Lorem ipsum dolor sit amet consectetur adipisicing.
+Lorem ipsum dolor sit amet.
+Lorem, ipsum dolor.
 </xmp>
         </section>
     </main>
