--- a/01-Emmet/15-documents.html
+++ b/01-Emmet/15-documents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12- Climp</title>
+    <title>15- Html Documents</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
@@ -14,22 +14,27 @@
     </nav>
     <main>
         <header>
-            <h1>12 -  Climp up ^</h1>
+            <h1>15 -  Html Documents "Html:"</h1>
             <h2>
-                Este comodín permite subir de nivel.
+                Este comodín permite crear diferentes tipos de documentos HTML
             </h2>
         </header>
         <section>
             <h3>Ejemplo:</h3>
-            <p>section>article>div^p</p>
+            <p>!</p>
+            <p>html:5</p>
             <h3>Resultado:</h3>
-<xmp>   
-<section>
-    <article>
-        <div></div>
-    </article>
-    <p></p>
-</section>
+<xmp>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 </xmp>
         </section>
     </main>
