--- a/02-Html/index.html
+++ b/02-Html/index.html
@@ -38,6 +38,10 @@
                 <i>05</i>
                 <span>Link</span>
             </a>  
+            <a href="Relative-path/index.html" target="_blank">
+                <i>06</i>
+                <span>Relative Path</span>
+            </a>  
         </menu>
     </main>
 </body>
