--- a/03-Css/index.html
+++ b/03-Css/index.html
@@ -30,37 +30,37 @@
                 <i>03</i>
                 <span>Attribute Style</span>
             </a> 
-            <a href="04-css.html">
+            <a href="04-basic-selector.html">
                 <i>04</i>
-                <span>css</span>
+                <span>Basic Selectors</span>
             </a> 
-            <a href="05-css.html">
+            <a href="05-advanced-selectors.html">
                 <i>05</i>
-                <span>css</span>
+                <span>Advanced Selectors</span>
             </a>  
-            <a href="06-css.html">
+            <a href="06-specifity.html">
                 <i>06</i>
-                <span>css</span>
+                <span>06-specifity</span>
             </a>  
-            <a href="07-css.html">
+            <a href="07-ineheritance.html">
                 <i>07</i>
-                <span>css</span>
+                <span>Inheritance</span>
             </a> 
-            <a href="08-css.html">
+            <a href="08-relative.html">
                 <i>08</i>
-                <span>css</span>
+                <span>Relative Units</span>
             </a> 
-            <a href="09-css.html">
+            <a href="09-absolute-units.html">
                 <i>09</i>
-                <span>css</span>
+                <span>Absolute Units</span>
             </a> 
-            <a href="10-css.html">
+            <a href="10-percentage-units.html">
                 <i>10</i>
-                <span>css</span>
+                <span>Percentage Units</span>
             </a> 
-            <a href="11-css.html">
+            <a href="11-colors.html">
                 <i>11</i>
-                <span>css</span>
+                <span>Colors</span>
             </a> 
             <a href="12-css.html">
                 <i>12</i>
