--- a/03-Css/index.html
+++ b/03-Css/index.html
@@ -62,17 +62,17 @@
                 <i>11</i>
                 <span>Colors</span>
             </a> 
-            <a href="12-css.html">
+            <a href="12-colors-alpha.html">
                 <i>12</i>
-                <span>css</span>
-            </a>
-            <a href="13-css.html">
+                <span>Colors Alpha</span>
+            </a> 
+            <a href="13-box-model.html">
                 <i>13</i>
-                <span>css</span>
-            </a>  
-            <a href="14-css.html">
+                <span>Box Model</span>
+            </a> 
+            <a href="14-background.html">
                 <i>14</i>
-                <span>css</span>
+                <span>Background</span>
             </a> 
             <a href="15-css.html">
                 <i>15</i>
