--- a/03-Css/14-background.html
+++ b/03-Css/14-background.html
@@ -7,6 +7,9 @@
     <title>Background</title>
     <link rel="stylesheet" href="css/master.css">
     <style>
+        ul {
+            color:#fff9;
+        }
         div.box{
             border: 4px solid #0009;
             border-radius: 8px;
