--- a/03-Css/index.html
+++ b/03-Css/index.html
@@ -74,49 +74,29 @@
                 <i>14</i>
                 <span>Background</span>
             </a> 
-            <a href="15-css.html">
+            <a href="15-position.html">
                 <i>15</i>
-                <span>css</span>
+                <span>Position</span>
             </a> 
-            <a href="16-css.html">
+            <a href="16-float.html">
                 <i>16</i>
-                <span>css</span>
+                <span>Float</span>
             </a> 
-            <a href="17-css.html">
+            <a href="17-visualization.html">
                 <i>17</i>
-                <span>css</span>
-            </a> 
-            <a href="18-css.html">
+                <span>Visualization</span>
+  
+            <a href="18-typogaphy.html">
                 <i>18</i>
-                <span>css</span>
+                <span>Typogaphy</span>
             </a> 
-            <a href="19-css.html">
+            <a href="19-text.html">
                 <i>19</i>
-                <span>css</span>
+                <span>Text</span>
             </a> 
-            <a href="20-css.html">
-                <i>20</i>
-                <span>css</span>
-            </a> 
-            <a href="21-css.html">
-                <i>21</i>
-                <span>css</span>
-            </a> 
-            <a href="22-css.html">
-                <i>22</i>
-                <span>css</span>
-            </a> 
-            <a href="23-css.html">
-                <i>23</i>
-                <span>css</span>
-            </a> 
-            <a href="24-css.html">
-                <i>24</i>
-                <span>css</span>
-            </a> 
-            <a href="25-css.html">
-                <i>25</i>
-                <span>css</span>
+            <a href="19-text.html">
+                <i>19</i>
+                <span>Text</span>
             </a> 
         </menu>
     </main>
