--- a/03-Css/18-typogaphy.html
+++ b/03-Css/18-typogaphy.html
@@ -6,7 +6,31 @@
     <title>Typogaphy</title>
     <link rel="stylesheet" href="css/master.css">
     <style>
-
+        ul {
+            color:#fff9;
+        }
+    @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+    .color-crimson {
+        color: crimson;
+    }
+    .ffamily-Satisfy {
+         font-family: "Satisfy", cursive;
+    }
+    .fsize-3rem {
+        font-size: 3rem;
+    }
+    .fweight-100{
+        color: black;
+        font-weight: 100;
+    }
+    .fweight-400{
+        color: black;
+        font-weight: 400;
+    }
+    .fweight-800{
+        color: black;
+        font-weight: 800;
+    }
     </style>
 </head>
 <body>
@@ -18,10 +42,26 @@
     <main>
         <header>
             <h1>Typogaphy</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
+            <ul>
+                <li>Color</li>
+                <li>Font Family</li>
+                <li> Size</li>
+                <li>Weight</li>
+            </ul>
         </header>
         <section>
-
+            <h3>Color:</h3>
+            <p class="color-crimson">Lorem, ipsum dolor.</p>
+            <h3>Font family</h3>
+            <p class="ffamily-Satisfy">Lorem, ipsum dolor.</p>
+            <h3>Font Size</h3>
+            <p class="ffamily-Satisfy fsize-3rem">Lorem, ipsum dolor.</p>
+            <h3>
+                Font Weight
+                <p class="fweight-100">Lorem, ipsum dolor.</p>
+                <p class="fweight-400">Lorem, ipsum dolor.</p>
+                <p class="fweight-800">Lorem, ipsum dolor.</p>
+            </h3>
         </section>
     </main>
 </body>
