--- a/03-Css/39-challenge-responsive.html
+++ b/03-Css/39-challenge-responsive.html
@@ -110,7 +110,7 @@
         }
 
         nav article img {
-            background-size: cover;
+            object-fit: cover;
             width: 385px;
         }
 
