--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <header>
             <h1>ADSO 2873711</h1>
             <h2>Análisis y Desarrollo de Software</h2>
+            <img src="images/Dazai.jpg" alt="DaySay">
+            <h3>Daniel Estiven Arboleda Duque</h3>
         </header>
         <menu>
             <a href="01-Emmet/index.html">
