--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
                 <i>03</i>
                 <span>CSS</span>
             </a>
-            <a href="">
+            <a href="04-Pug/index.html">
                 <i>04</i>
+                <span>PUG</span>
+            </a>
+            <a href="">
+                <i>05</i>
+                <span>SASS</span>
+            </a>
+            <a href="">
+                <i>06</i>
+                <span>Bootstrap</span>
+            </a>
+            <a href="">
+                <i>07</i>
+                <span>Tailwind</span>
+            </a>
+            <a href="">
+                <i>08</i>
                 <span>JavaScript</span>
             </a>
         </menu>
