--- a/02-Html/index.html
+++ b/02-Html/index.html
@@ -15,6 +15,7 @@
     <main>
         <header>
             <h1>HTML</h1>
+            <img src="images/logo (1).png" alt="Html">
             <h2>Es un lenguaje de marcado para la web que define la estructura de las páginas web.</h2>
         </header>
         <menu>
