--- a/03-Css/index.html
+++ b/03-Css/index.html
@@ -36,6 +36,7 @@
     <main>
         <header>
             <h1>CSS</h1>
+            <img src="images/logo.png" alt="Css">
             <h2>Es un lenguaje de hoas de estilo creado para controlar el aspecto o presentación de los documentos
                 electronicos definidos por HTML.</h2>
         </header>
