--- a/04-Pug/html/15-iterations.html
+++ b/04-Pug/html/15-iterations.html
@@ -2,16 +2,25 @@
 <html lang="en">
   <head> 
     <meta charset="UTF-8">
-    <title>Literal Attributes:</title>
+    <title>Iterations :</title>
     <link rel="stylesheet" href="../css/master.css">
   </head>
   <body> 
     <nav class="controls"><a href="../index.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"/></svg></a></nav>
     <main> 
       <header> 
-        <h1>Literal Attributes   </h1>
+        <h1>Iterations    </h1>
       </header>
-      <section></section>
+      <section>
+        <ul> 
+          <li style="padding:4px; background-color:red">0:red</li>
+          <li style="padding:4px; background-color:green">1:green</li>
+          <li style="padding:4px; background-color:blue">2:blue</li>
+          <li style="padding:4px; background-color:orange">3:orange</li>
+          <li style="padding:4px; background-color:yellow">4:yellow</li>
+          <li style="padding:4px; background-color:cyan">5:cyan</li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
