--- a/04-Pug/html/17-challenge.html
+++ b/04-Pug/html/17-challenge.html
@@ -2,16 +2,49 @@
 <html lang="en">
   <head> 
     <meta charset="UTF-8">
-    <title>Literal Attributes:</title>
+    <title>Challenge:</title>
     <link rel="stylesheet" href="../css/master.css">
   </head>
   <body> 
     <nav class="controls"><a href="../index.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"/></svg></a></nav>
     <main> 
       <header> 
-        <h1>Literal Attributes   </h1>
+        <h1>Challenge   </h1>
       </header>
-      <section></section>
+      <section>
+        <table style="width: 100%">
+          <tr> 
+            <td style="background-color: rgb(250,250,250); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(230,225,240); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(210,200,230); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(190,175,220); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(170,150,210); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(150,125,200); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(130,100,190); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(110,75,180); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(90,50,170); height: 40px;"></td>
+          </tr>
+          <tr> 
+            <td style="background-color: rgb(70,25,160); height: 40px;"></td>
+          </tr>
+        </table>
+      </section>
     </main>
   </body>
 </html>
