--- a/04-Pug/html/17-challenge.html
+++ b/04-Pug/html/17-challenge.html
@@ -14,34 +14,34 @@
       <section>
         <table style="width: 100%">
           <tr> 
-            <td style="background-color: rgb(250,250,250); height: 40px;"></td>
+            <td style="background-color: rgb(250,250,250); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(230,225,240); height: 40px;"></td>
+            <td style="background-color: rgb(230,225,240); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(210,200,230); height: 40px;"></td>
+            <td style="background-color: rgb(210,200,230); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(190,175,220); height: 40px;"></td>
+            <td style="background-color: rgb(190,175,220); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(170,150,210); height: 40px;"></td>
+            <td style="background-color: rgb(170,150,210); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(150,125,200); height: 40px;"></td>
+            <td style="background-color: rgb(150,125,200); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(130,100,190); height: 40px;"></td>
+            <td style="background-color: rgb(130,100,190); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(110,75,180); height: 40px;"></td>
+            <td style="background-color: rgb(110,75,180); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(90,50,170); height: 40px;"></td>
+            <td style="background-color: rgb(90,50,170); height: 40px; border-radius: 4px"></td>
           </tr>
           <tr> 
-            <td style="background-color: rgb(70,25,160); height: 40px;"></td>
+            <td style="background-color: rgb(70,25,160); height: 40px; border-radius: 4px"></td>
           </tr>
         </table>
       </section>
