--- a/05-Sass/10-challenge.html
+++ b/05-Sass/10-challenge.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10- Challenge (SCSS)</title>
-    <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/10-challenge.css">
 </head>
+
 <body>
-    
+    <nav class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+            <div class="nav-title">
+                [Menu Burger]
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+
+        <ul class="nav-list">
+            <li><a href="#"> > Home</a></li>
+            <li><a href="#"> > About</a></li>
+            <li><a href="#"> > Portfolio</a></li>
+            <li><a href="#"> > Servicies</a></li>
+            <li><a href="#"> > Contact</a></li>
+        </ul>
+    </nav>
+    <nav>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsum laudantium inventore sequi nemo rerum fuga impedit consectetur facere possimus adipisci quae explicabo provident, architecto atque libero numquam amet doloribus dicta, earum magni ullam dolore. Quas at nostrum fugiat dignissimos velit blanditiis totam placeat enim sint ipsum dolores ipsa, aut doloribus incidunt animi voluptates aliquid voluptatibus tempore voluptate maiores earum, inventore est nam. Unde temporibus vel impedit libero, fugit voluptates quibusdam nostrum! Maxime error qui fuga, asperiores deserunt beatae facere ipsum nemo vero rerum nisi optio consequatur odio, impedit quam aspernatur dolor. Rerum eaque blanditiis officia eligendi odio tempora sed architecto, nisi, saepe sunt ea inventore maxime obcaecati nesciunt corrupti reprehenderit ullam cupiditate quibusdam totam at alias et ducimus? Incidunt libero earum laudantium facere blanditiis deleniti error aspernatur asperiores quibusdam. Aperiam iste, molestiae dicta totam animi atque optio vitae consectetur sed consequuntur fugit ullam delectus nulla perspiciatis? Cum, quisquam itaque praesentium temporibus architecto corrupti explicabo aliquid eveniet alias, obcaecati nostrum minus laborum dolorem hic possimus, natus consequatur unde perspiciatis cumque fugiat. Labore, possimus. Molestiae repellat sapiente temporibus ea voluptatum in tempore nulla, vel voluptatem expedita mollitia impedit, quasi magni amet. Eveniet recusandae tenetur illo voluptatem velit praesentium nemo architecto corporis fugit cupiditate eligendi mollitia quaerat vero, non error quas voluptate assumenda. Aliquam repellendus, expedita tenetur reiciendis quo consequatur pariatur! Animi, consequuntur laboriosam? Blanditiis optio molestias aliquid voluptates? Minus officiis exercitationem, fugit iure eligendi repudiandae tenetur molestiae hic temporibus molestias, dolores esse nesciunt. Quae saepe nam sequi, quis optio accusamus atque eius voluptas id nulla deserunt quod ducimus eum rem itaque adipisci nesciunt placeat sit quia suscipit, recusandae minus. Eveniet alias commodi laborum ullam, rem numquam iusto itaque pariatur cumque officiis ea aliquam distinctio necessitatibus non delectus fugit quibusdam sit esse dolores aspernatur recusandae culpa vel? Quae laboriosam unde corporis asperiores!
+        </p>
+    </nav>
 </body>
+
 </html>
