--- a/06-bootstrap/05-utilities/05-flex.html
+++ b/06-bootstrap/05-utilities/05-flex.html
@@ -56,12 +56,111 @@
                 <div class="p-2">Flex item 1</div>
                 <div class="p-2">Flex item 2</div>
                 <div class="p-2">Flex item 3</div>
-              </div>
-              <div class="d-flex flex-column-reverse">
+            </div>
+            <div class="d-flex flex-column-reverse">
                 <div class="p-2">Flex item 1</div>
                 <div class="p-2">Flex item 2</div>
                 <div class="p-2">Flex item 3</div>
-              </div>
+            </div>
+            <h3 class="my-4">Justify content:</h3>
+            <div class="d-flex justify-content-start">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>Start</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-end">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>End</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-center">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>Center</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-between">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>Between</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-around">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>Around</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-evenly">
+                <div>Justify</div>
+                <div>Content</div>
+                <div>Evenly</div>
+            </div>
+            <br>
+            <h3 class="my-4">Align items:</h3>
+            <div class="d-flex align-items-start" style="height: 120px;">
+                <div class="p-2">Aling</div>
+                <div class="p-2">Items</div>
+                <div class="p-2">Start</div>
+            </div>
+            <br>
+            <div class="d-flex align-items-end" style="height: 120px;">
+                <div class="p-2">Aling</div>
+                <div class="p-2">Items</div>
+                <div class="p-2">End</div>
+            </div>
+            <br>
+            <div class="d-flex align-items-center" style="height: 120px;">
+                <div class="p-2">Aling</div>
+                <div class="p-2">Items</div>
+                <div class="p-2">Center</div>
+            </div>
+            <br>
+            <div class="d-flex align-items-baseline" style="height: 120px;">
+                <div class="p-2">Aling</div>
+                <div class="p-2">Items</div>
+                <div class="p-2">Baseline</div>
+            </div>
+            <br>
+            <div class="d-flex align-items-stretch" style="height: 120px;">
+                <div class="p-2">Aling</div>
+                <div class="p-2">Items</div>
+                <div class="p-2">Stretch</div>
+            </div>
+            <br>
+            <h3 class="my-4">Align self:</h3>
+            <div class="d-flex" style="height: 120px;">
+                <div>Flex item</div>
+                <div class="align-self-start">Aligned flex start</div>
+                <div>Flex item</div>
+            </div>
+            <br>
+            <div class="d-flex" style="height: 120px;">
+                <div>Flex item</div>
+                <div class="align-self-end">Aligned flex end</div>
+                <div>Flex item</div>
+            </div>
+            <br>
+            <div class="d-flex" style="height: 120px;">
+                <div>Flex item</div>
+                <div class="align-self-center">Aligned flex center</div>
+                <div>Flex item</div>
+            </div>
+            <br>
+            <div class="d-flex" style="height: 120px;">
+                <div>Flex item</div>
+                <div class="align-self-baseline">Aligned flex baseline</div>
+                <div>Flex item</div>
+            </div>
+            <br>
+            <div class="d-flex" style="height: 120px;">
+                <div>Flex item</div>
+                <div class="align-self-stretch">Aligned flex stretch</div>
+                <div>Flex item</div>
+            </div>
+            <br>
         </section>
     </main>
     <script src="../js/bootstrap.min.js"></script>
