--- a/06-bootstrap/index.html
+++ b/06-bootstrap/index.html
@@ -255,11 +255,11 @@
                 <span>Z-index</span>
             </a>
             <h3>06- Challenge 👨🏻‍🏫</h3>
-            <a href="06-challenge/01-cv.html" target="_blank">
+            <a href="https://www.figma.com/design/PNxro0TkkPk7rHzZQx4omQ/Portfolio-(Boostrap)?node-id=0-1&t=owVtkJ0ZLvD6pq3K-1" target="_blank">
                 <i>01</i>
-                <span>Curriculum Vitae (CV)</span>
+                <span>Portfolio</span>
             </a>
         </menu>
     </main>
 </body>
-</html>
+</html>     
