--- a/06-bootstrap/index.html
+++ b/06-bootstrap/index.html
@@ -255,7 +255,8 @@
                 <span>Z-index</span>
             </a>
             <h3>06- Challenge 👨🏻‍🏫</h3>
-            <a href="https://www.figma.com/design/PNxro0TkkPk7rHzZQx4omQ/Portfolio-(Boostrap)?node-id=0-1&t=owVtkJ0ZLvD6pq3K-1" target="_blank">
+            <a href="06-challenge/01-portfolio.html" target="_blank">
+                <!--https://www.figma.com/design/PNxro0TkkPk7rHzZQx4omQ/Portfolio-(Boostrap)?node-id=0-1&t=owVtkJ0ZLvD6pq3K-1-->
                 <i>01</i>
                 <span>Portfolio</span>
             </a>
