--- a/07-tailwind/13-challenge.html
+++ b/07-tailwind/13-challenge.html
@@ -110,7 +110,7 @@
         <div class="text-5xl font-bold text-green-600 mt-[-50px]">Lugares donde aparecerás</div>
         <div class="relative rounded-xl overflow-auto mt-[-10px]">
             <div class="shadow-sm overflow-hidden my-8">
-                <table class="m-1 ml-10 table-auto text-center text-[20px]">
+                <table class="m-6 text-center text-[20px] w-[454px] me-10">
                     <thead>
                         <tr>
                             <th class="border-b border-red-400 p-4 pl-8 text-white"></th>
