--- a/08-javascript/17-pokedex-api.html
+++ b/08-javascript/17-pokedex-api.html
@@ -8,34 +8,239 @@
     <link rel="stylesheet" href="css/master.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        section ul.pokemons {
-            background-position: center;
-            background-repeat: no-repeat;
+        section {
+            height: 600px;
+        }
+
+        .image1 {
+            background: url("images/pokedex/Frame\ 6.png") no-repeat;
+            height: 600px;
+            background-size: 100%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .logo {
+            padding-top: 150px;
+            max-width: 100%;
+            height: auto;
+        }
+
+        .logo img {
+            max-width: 100%;
+            height: auto;
+            margin-left: 60px;
+        }
+
+        .boton {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .boton button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .image2 {
+            background: url("images/pokedex/Frame\ 5.png") no-repeat;
+            height: 600px;
+            background-size: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            position: relative;
+            padding-top: 85px;
+        }
+
+        .volver {
+            position: absolute;
+            top: 8px;
+            left: 20px;
+            z-index: 10;
+        }
+
+        .volver img {
+            scale: 0.9;
+            max-width: 100%;
+            height: auto;
+        }
+
+        .image2 {
+            background: url("images/pokedex/Frame\ 5.png") no-repeat;
+            height: 600px;
+            background-size: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            position: relative;
+            padding-top: 85px;
+        }
+
+        .cards {
+            background: url("images/pokedex/Rectangle\ 3.png") no-repeat;
+            height: 238px;
+            width: 158px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            box-sizing: border-box;
+            text-align: center;
+        }
+
+        .cards h2,
+        .cards h3 {
+            color: #ffffff;
+            margin: 0;
+        }
+
+        .cards h2 {
+            font-size: 24px;
+        }
+
+        .cards-container {
+            margin-top: -10px;
+            margin-left: 22px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            overflow-y: auto;
+            /* Mantiene el scroll vertical */
+            max-height: 490px;
+            /* Establece una altura máxima para contener el contenido */
+            box-sizing: border-box;
+            /* Asegura que el padding y el borde no se cuenten como contenido adicional */
+        }
+
+        .image3 {
+            background: url("images/pokedex/Frame\ 4.png") no-repeat;
+            height: 600px;
+            background-size: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+        }
+
+        .top-bar {
+            display: flex;
+            align-items: center;
+            position: absolute;
+            top: 8px;
+            left: 20px;
+            z-index: 10;
+            gap: 10px;
+        }
+
+        .volver img {
+            scale: 0.9;
+            max-width: 100%;
+            height: auto;
+        }
+
+        .nombrePokemon h2 {
+            margin-left: 10px;
+            margin-top: -10px;
+            font-size: 50px;
+            color: #dddddd;
+        }
+
+        .info {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .datils {
+            height: 260px;
+            width: 260px;
+            background: url("images/pokedex/Rectangle\ 6.png") no-repeat;
             background-size: cover;
-            display: grid;
-            gap: 0.2rem;
-            grid-template-columns: repeat(4, 1fr);
-            list-style: none;
-            padding: 0%;
+            margin-right: -30px;
+            margin-top: 100px;
+        }
 
-            li {
-                align-items: center;
-                background-color: violet;
-                border-radius: 4px;
-                display: flex;
-                flex-direction: column;
-                height: 100px;
-                width: 100px;
+        .num,
+        .tipo {
+            display: inline-block;
+            height: 53px;
+            width: 94px;
+            background-size: cover;
+            color: #e2e2e2;
+            text-align-last: center;
+            margin-top: -10px;
+            font-size: 33px;
+        }
 
-                span {
-                    background-color: #0009;
-                    display: flex;
-                    font-size: 0.8rem;
-                    justify-content: center;
-                    width: 100%;
+        .num {
+            background: url("images/pokedex/Rectangle\ 21.png") no-repeat;
+        }
 
-                }
-            }
+        .num-tipo-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            margin: 0;
+        }
+
+        .stats {
+            border: 1px solid #Fff;
+            background-color: #c2c2c273;
+            border-radius: 10%;
+            width: 370px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 5px;
+        }
+
+        .stat {
+            width: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+        }
+
+        .stat-title {
+            font-size: 16px;
+            font-weight: bold;
+            margin-right: 20px;
+            color: #fff;
+        }
+
+        .stat-bar {
+            flex: 3;
+            height: 10px;
+            background-color: #ccc;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        .stat-fill {
+            height: 100%;
+            background-color: #ff6347;
+            border-radius: 5px;
+        }
+
+        .stat-value {
+            flex: 1;
+            font-size: 15px;
+            color: #fff;
+            text-align: right;
         }
     </style>
 </head>
@@ -43,8 +248,7 @@
 <body>
     <nav class="controls">
         <a href="index.html">
-            <svg xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path fill="#ffffff"
                     d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z" />
             </svg>
@@ -53,40 +257,135 @@
     <main>
         <header>
             <h1>17- pokedex</h1>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
-                src="https://embed.figma.com/design/rcpk6gKBUWTibP7UiEX6dC/Untitled?node-id=1-4&embed-host=share"
-                allowfullscreen></iframe>
         </header>
         <section>
-
-            <ul class="pokemons">
-            </ul>
+            <div class="image1 image" id="image1">
+                <div class="logo">
+                    <img src="images/pokedex/image 7.png" alt="Pokedex Logo">
+                </div>
+                <div class="boton">
+                    <a href="#image2"><img src="images/pokedex/Group 1.png" alt="Group 1"></a>
+                </div>
+            </div>
+            <div class="image2 image" id="image2">
+                <div class="volver">
+                    <a href="#image1"><img src="images/pokedex/Group 2.png" alt="Volver"></a>
+                </div>
+                <div class="cards-container">
+                    <!-- Tarjetas de los Pokémon de la temporada 2 -->
+                </div>
+            </div>
+            <div class="image3 image" id="image3">
+                <div class="top-bar">
+                    <a href="#image2"><img src="images/pokedex/Group 2.png" alt="Volver"></a>
+                    <div class="nombrePokemon">
+                        <h2 id="pokemonName">Bayleef</h2>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="datils" id="pokemonImage"></div>
+                    <div class="num-tipo-wrapper">
+                        <div class="num" id="pokemonNumber">
+                            <h2>#153</h2>
+                        </div>
+                        <div class="tipo" id="pokemonType"></div>
+                    </div>
+                </div>
+                <div class="stats" id="pokemonStats">
+                    <!-- Stats se cargarán dinámicamente -->
+                </div>
+            </div>
         </section>
     </main>
     <script>
-        const season1 = [1, 151];
         const season2 = [152, 251];
-        const pks = document.querySelector('.pokemons')
-        const loadPokemons = async (pk) => {
-            for (let pk = season2[0]; pk <= season2[1]; pk++) {
-                const url = 'https://pokeapi.co/api/v2/pokemon/' + pk
+        const cardsContainer = document.querySelector('.cards-container');
+        const image3 = document.getElementById('image3');
+
+        const loadPokemons = async (idPokemon) => {
+            let start = idPokemon ? idPokemon : season2[0];
+            let end = idPokemon ? idPokemon : season2[1];
+
+            for (let pk = start; pk <= end; pk++) {
+                const url = 'https://pokeapi.co/api/v2/pokemon/' + pk;
                 await fetch(url)
                     .then((response) => response.json())
                     .then((data) => {
-                        console.log(data)
-                        if (pk < 10) { pk = '00' + pk }
-                        if (pk < 100 && pk > 9) { pk = '0' + pk }
-                        const image = 'https://www.serebii.net/swordshield/pokemon/' + pk + '.png'
-                        pks.innerHTML += "<li style='background: #fffa url(" + image + ") no-repeat center /contain'> \
-                                            <span>"+ data.id + "</span> \
-                                            <span>"+ data.name + "</span> \
-                                        </li>"
-                    })
+                        let pkNumber = data.id.toString().padStart(3, '0');
+                        const image = 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/' + pk + '.png';
+                        const card = `<div class="cards" data-id="${pk}">
+                            <h2>${data.name}</h2>
+                            <img src="${image}" alt="${data.name}">
+                            <h3>${pkNumber}</h3>
+                        </div>`;
+                        cardsContainer.innerHTML += card;
+                    });
             }
         }
-        loadPokemons()
+
+        loadPokemons();
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const sections = document.querySelectorAll('.image');
+            const links = document.querySelectorAll('a[href^="#"]');
+
+            sections.forEach(section => {
+                section.style.display = 'none';
+            });
+
+            document.getElementById('image1').style.display = 'block';
+
+            links.forEach(link => {
+                link.addEventListener('click', function (e) {
+                    e.preventDefault();
+
+                    sections.forEach(section => {
+                        section.style.display = 'none';
+                    });
+
+                    const targetId = this.getAttribute('href').substring(1);
+                    document.getElementById(targetId).style.display = 'block';
+                });
+            });
+
+            // Evento para mostrar la image3 con los detalles del Pokémon
+            cardsContainer.addEventListener('click', function (e) {
+                if (e.target.closest('.cards')) {
+                    const pokemonId = e.target.closest('.cards').dataset.id;
+                    loadPokemonDetails(pokemonId);
+                }
+            });
+        });
+
+        const loadPokemonDetails = async (id) => {
+            const url = 'https://pokeapi.co/api/v2/pokemon/' + id;
+            const response = await fetch(url);
+            const data = await response.json();
+
+            document.getElementById('pokemonName').innerText = data.name;
+            document.getElementById('pokemonNumber').innerText = `#${data.id.toString().padStart(3, '0')}`;
+            document.getElementById('pokemonType').style.backgroundImage = `url("images/pokedex/icons8-red-team-100.png")`; // Asigna el tipo de imagen correspondiente
+
+            document.getElementById('pokemonImage').style.backgroundImage = `url("${data.sprites.other['official-artwork'].front_default}")`;
+
+            const statsContainer = document.getElementById('pokemonStats');
+            statsContainer.innerHTML = '';
+            data.stats.forEach(stat => {
+                const statElement = `<div class="stat">
+                    <div class="stat-title">${stat.stat.name}</div>
+                    <div class="stat-bar">
+                        <div class="stat-fill" style="width: ${stat.base_stat / 2}%;"></div>
+                    </div>
+                    <div class="stat-value">${stat.base_stat}</div>
+                </div>`;
+                statsContainer.innerHTML += statElement;
+            });
+
+            document.getElementById('image2').style.display = 'none';
+            document.getElementById('image3').style.display = 'block';
+        }
     </script>
-    tiene menú contextual
+
 </body>
 
 </html>
