--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -143,6 +143,22 @@
             {
                 url: '28-pop-up-windows.html',
                 text: 'Pop-Up Windows'
+            },
+            {
+                url: '29-local-storage.html',
+                text: 'local Storage'
+            },
+            {
+                url: '30-map-filter-reduce.html',
+                text: 'Map filter reduce'
+            },
+            {
+                url: '31-json-data.html',
+                text: 'Json Data'
+            },
+            {
+                url: '32-on-enter-frame.html',
+                text: 'On enter frame'
             }
         ]
 
